fixed contact container alignment issues

--- a/About.css
+++ b/About.css
@@ -416,7 +416,7 @@ article .icon{
 }
 
 .email-icon{
-    height: 2.5rem;
+    height: 2.3rem;
 }
 
 /* footer */
